[tool.poetry]
name = "promteng"
version = "0.1.0"
description = ""
authors = ["Arindam Tanti <arindamtanti123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.0"
poetry = "1.5.1"
openai = "0.27.8"
jupyter = "^1.0.0"
viola = "^0.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
